--- a/baby-flashcard/index.html
+++ b/baby-flashcard/index.html
@@ -32,13 +32,17 @@
             <div class="col-md-6" style="vertical-align:middle;margin-top:32px">
               <p>
               <b>Baby Flashcard</b> is an app that purposely design as an educational, fun & entertaining app for baby and toddlers alike.
-              </p>              
+              </p>
               <p>
-              Research suggest that children have an amazing ability to learn, especially between birth and five years old, and they do it by partly watching & listening.            </div>
+              Research suggest that children have an amazing ability to learn, especially between birth and five years old, and they do it by partly watching & listening.
               </p>
               <p>
                 It's free to download and easy to use.
               </p>
+              <a href="https://itunes.apple.com/us/app/baby-flashcards-by-gabriella/id1359505493?ls=1&mt=8">
+                <img src="apple-icon.png" width="96px"/>
+              </a>
+              </div>
             </div>
           </div>
           </div>
